--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div>
-            <img src="/img/mcdonalds-logo-footer-bg-white-removebg-preview.png" alt="logo">
+            <img src="imagem/mcdonalds-logo-footer-bg-white-removebg-preview.png" alt="logo">
         </div>
         <nav>
             <ul>
@@ -51,5 +51,5 @@
             
     </header>
 </body>
-<script src="/javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 </html>
